Fixed MQs after testing on smaller laptop

--- a/goose-portfolio/src/App.css
+++ b/goose-portfolio/src/App.css
@@ -88,4 +88,33 @@ body {
   color: #EDE768;
 }
 
+@media only screen and (min-width: 1280px) and (max-width: 1440px) {
+
+  .body {
+    background-color: #EDE768;
+    height: 100vh;  
+    
+   
+  }
+}
+
+.App {
+  position: absolute;
+  text-align: center;
+  background-color: #EDE768; 
+}
+
+
+
+.App-header {
+  background-color: #EDE768;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #EDE768;
+}
+
+
 
